--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@jamescoyle/vue-icon": "^0.1.2",
     "@vueuse/motion": "^2.2.6",
     "vue": "^3.5.13",
